#All exported headers
nobase_include_HEADERS=opx/hal_rt_api.h opx/hal_rt_extn.h  opx/hal_rt_mem.h opx/hal_rt_route.h \
                       opx/nas_rt_api.h opx/hal_rt_debug.h opx/hal_rt_main.h opx/hal_rt_mpath_grp.h \
                       opx/hal_rt_util.h opx/nbr-mgr/nbr_mgr_cache.h opx/nbr-mgr/nbr_mgr_log.h \
                       opx/nbr-mgr/nbr_mgr_main.h opx/nbr-mgr/nbr_mgr_msgq.h \
                       opx/nbr-mgr/nbr_mgr_timer.h opx/nbr-mgr/nbr_mgr_utils.h

