#
# Copyright (c) 2018 Dell Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may
# not use this file except in compliance with the License. You may obtain
# a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
#
# THIS CODE IS PROVIDED ON AN *AS IS* BASIS, WITHOUT WARRANTIES OR
# CONDITIONS OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING WITHOUT
# LIMITATION ANY IMPLIED WARRANTIES OR CONDITIONS OF TITLE, FITNESS
# FOR A PARTICULAR PURPOSE, MERCHANTABLITY OR NON-INFRINGEMENT.
#
# See the Apache Version 2.0 License for specific language governing
# permissions and limitations under the License.
#

#All exported headers
nobase_include_HEADERS=opx/hal_rt_api.h opx/hal_rt_extn.h  opx/hal_rt_mem.h opx/hal_rt_route.h \
                       opx/nas_rt_api.h opx/hal_rt_debug.h opx/hal_rt_main.h opx/hal_rt_mpath_grp.h \
                       opx/hal_rt_util.h opx/nbr-mgr/nbr_mgr_cache.h opx/nbr-mgr/nbr_mgr_log.h \
                       opx/nbr-mgr/nbr_mgr_main.h opx/nbr-mgr/nbr_mgr_msgq.h \
                       opx/nbr-mgr/nbr_mgr_timer.h opx/nbr-mgr/nbr_mgr_utils.h

